<resources>
    <string name="app_name">E_University</string>

    <string name="class_table_title">课程表</string>
    <string name="class_table_empty_tips">还没有导入过数据呢，点击这里导入。</string>

    <string name="drawer_helper_title">教务助手</string>
    <string name="drawer_helper_class_table">课程表</string>
    <string name="drawer_helper_exams">考试时间</string>
    <string name="drawer_helper_scores">成绩单</string>

    <string name="login_title">登录</string>
    <string name="login_empty_info">学号、密码或验证码不能为空</string>
    <string name="login_server_error">信息门户服务器发生错误</string>
    <string name="login_captcha_error">验证码获取错误</string>
    <string name="login_hint_username">学号</string>
    <string name="login_hint_password">密码</string>
    <string name="login_hint_captcha">验证码</string>
    <string name="login_refresh_captcha">点击左侧刷新验证码</string>
    <string name="login_get_last_score">获取上学期成绩</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_submit">登录</string>
    <string name="login_username_empty">学号不能为空！</string>
    <string name="login_password_empty">密码不能为空！</string>
    <string name="login_captcha_empty">验证码不能为空！</string>
    <string name="drawer_login_title">登录</string>

</resources>
